Clear visibility mapping if all cluster nodes are visible.